--- a/src/styles/blogs/_blogs.scss
+++ b/src/styles/blogs/_blogs.scss
@@ -11,13 +11,12 @@
   &__top {
     background-color: white;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding-left: 1rem;
     transition: scale 0.3s ease, background-color 0.3s ease;
     &__text {
-      width: 32rem;
+      width: 40%;
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
@@ -45,8 +44,7 @@
       }
     }
     &__img {
-      max-width: 30rem;
-      width: 100%;
+      width: 50%;
     }
   }
   &__top:hover {
@@ -57,15 +55,13 @@
   &__bot {
     display: flex;
     gap: 2rem;
-    flex-wrap: wrap;
     &__first,
     &__second,
     &__third {
-      padding: 1rem 0rem 1rem 1rem;
+      padding: 1rem;
       transition: transform 0.3s ease, background-color 0.3s ease;
-      height: 26rem;
       background-color: white;
-      width: 24rem;
+      width: 30%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -101,28 +97,324 @@
 }
 
 @media (min-width: 1025px) and (max-width: 1440px) {
+  .blogs {
+    &__head {
+      font-size: 3.2rem;
+      font-weight: 700;
+    }
+    &__top {
+      padding-left: 1rem;
+      gap: 2rem;
+      &__text {
+        width: 40%;
+
+        gap: 1.5rem;
+        &__subtitle {
+        }
+        &__heading {
+          font-size: 1.8rem;
+        }
+        &__readMore {
+          padding-top: 2rem;
+          gap: 2rem;
+          &__text {
+            gap: 1rem;
+            &__img {
+              height: 0.8rem;
+            }
+          }
+        }
+      }
+      &__img {
+        width: 50%;
+      }
+    }
+
+    &__bot {
+      gap: 1.5rem;
+      &__first,
+      &__second,
+      &__third {
+        padding: 1rem;
+        width: 30%;
+        gap: 3rem;
+
+        &__text {
+          width: 100%;
+          gap: 1rem;
+          &__subtitle {
+          }
+          &__heading {
+            font-size: 1.5rem;
+            padding-bottom: 1rem;
+          }
+        }
+        &__img {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 835px) and (max-width: 1024px) {
-  .company {
-    padding: 4rem 3rem;
+  .blogs {
+    padding: 7rem 3rem;
+
+    &__head {
+      font-size: 3rem;
+    }
+    &__top {
+      padding-left: 1rem;
+      gap: 2rem;
+      &__text {
+        width: 40%;
+
+        gap: 1.5rem;
+        &__subtitle {
+        }
+        &__heading {
+          font-size: 1.3rem;
+        }
+        &__readMore {
+          padding-top: 2rem;
+          gap: 2rem;
+          &__text {
+            gap: 1rem;
+            &__img {
+              height: 0.8rem;
+            }
+          }
+        }
+      }
+      &__img {
+        width: 50%;
+      }
+    }
+
+    &__bot {
+      gap: 1rem;
+      &__first,
+      &__second,
+      &__third {
+        padding: 1rem;
+        width: 30%;
+        gap: 3rem;
+
+        &__text {
+          width: 100%;
+          gap: 1rem;
+          &__subtitle {
+          }
+          &__heading {
+            font-size: 1.3rem;
+            padding-bottom: 1rem;
+          }
+        }
+        &__img {
+          width: 100%;
+        }
+      }
+    }
   }
 }
 
 @media (min-width: 769px) and (max-width: 834px) {
-  .company {
-    padding: 4rem 2.8rem;
+  .blogs {
+    padding: 6rem 2.8rem;
+
+    &__head {
+      font-size: 2.5rem;
+    }
+    &__top {
+      padding-left: 1rem;
+      gap: 1.5rem;
+      &__text {
+        width: 40%;
+
+        gap: 1.2rem;
+        &__subtitle {
+          font-size: 0.8rem;
+        }
+        &__heading {
+          font-size: 1.1rem;
+        }
+        &__readMore {
+          padding-top: 1.6rem;
+          gap: 1rem;
+          &__text {
+            gap: 0.6rem;
+            &__img {
+              height: 0.8rem;
+            }
+          }
+        }
+      }
+      &__img {
+        width: 50%;
+      }
+    }
+
+    &__bot {
+      gap: 1rem;
+      &__first,
+      &__second,
+      &__third {
+        padding: 1rem;
+        width: 30%;
+        gap: 2rem;
+
+        &__text {
+          width: 100%;
+          gap: 1rem;
+          &__subtitle {
+            font-size: 0.8rem;
+          }
+          &__heading {
+            font-size: 1.1rem;
+            padding-bottom: 1rem;
+          }
+        }
+        &__img {
+          width: 100%;
+        }
+      }
+    }
   }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
-  .company {
-    padding: 4rem 2.2rem;
+  .blogs {
+    padding: 5rem 2.2rem;
+
+    &__head {
+      font-size: 2.2rem;
+    }
+    &__top {
+      padding: 1rem;
+      gap: 1rem;
+      flex-direction: column;
+      &__text {
+        width: 100%;
+
+        gap: 0.4rem;
+        &__subtitle {
+          font-size: 0.6rem;
+        }
+        &__heading {
+          font-size: 1.1rem;
+        }
+        &__readMore {
+          padding-top: 1.6rem;
+          gap: 0.3rem;
+          &__text {
+            font-size: 0.8rem;
+            gap: 0.6rem;
+            &__img {
+              height: 0.6rem;
+            }
+          }
+        }
+      }
+      &__img {
+        width: 100%;
+      }
+    }
+
+    &__bot {
+      gap: 1rem;
+      flex-direction: column;
+      align-items: center;
+      &__first,
+      &__second,
+      &__third {
+        padding: 1rem;
+        width: 100%;
+        gap: 2rem;
+        flex-direction: row;
+        &__text {
+          width: 40%;
+          gap: 1rem;
+          &__subtitle {
+            font-size: 0.6rem;
+          }
+          &__heading {
+            font-size: 1.1rem;
+            padding-bottom: 1rem;
+          }
+        }
+        &__img {
+          width: 50%;
+        }
+      }
+    }
   }
 }
 
 @media (max-width: 480px) {
-  .company {
+  .blogs {
     padding: 4rem 1.8rem;
+
+    &__head {
+      font-size: 2rem;
+    }
+    &__top {
+      padding: 0.8rem;
+      gap: 0.8rem;
+      flex-direction: column;
+      &__text {
+        width: 100%;
+
+        gap: 0.3rem;
+        &__subtitle {
+          font-size: 0.5rem;
+        }
+        &__heading {
+          font-size: 1rem;
+        }
+        &__readMore {
+          padding-top: 1.4rem;
+          gap: 0.2rem;
+          &__text {
+            font-size: 0.6rem;
+            gap: 0.5rem;
+            &__img {
+              height: 0.5rem;
+            }
+          }
+        }
+      }
+      &__img {
+        width: 100%;
+      }
+    }
+
+    &__bot {
+      gap: 1rem;
+      flex-direction: column;
+      align-items: center;
+      &__first,
+      &__second,
+      &__third {
+        padding: 0.8rem;
+        width: 100%;
+        gap: 1.5rem;
+        flex-direction: row;
+        &__text {
+          width: 40%;
+          gap: 0.8rem;
+          &__subtitle {
+            font-size: 0.5rem;
+          }
+          &__heading {
+            font-size: 1rem;
+            padding-bottom: 0.8rem;
+          }
+        }
+        &__img {
+          width: 50%;
+        }
+      }
+    }
   }
 }
